university web clone completed

--- a/universityWeb/index.html
+++ b/universityWeb/index.html
@@ -76,6 +76,72 @@
         </div>
       </div>
     </section>
+
+    <section class="campus">
+      <h1>Our Global Campus</h1>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+
+      <div class="row">
+        <div class="campus-col">
+          <img src="london.jpg" alt="img" />
+          <div class="layer">
+            <h3>LONDON</h3>
+          </div>
+        </div>
+        <div class="campus-col">
+          <img src="uk.jpg" alt="img" />
+          <div class="layer">
+            <h3>NEW YORK</h3>
+          </div>
+        </div>
+        <div class="campus-col">
+          <img src="america.jpg" alt="img" />
+          <div class="layer">
+            <h3>WASHINGTON</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="facilites">
+      <h1>Our Facilites</h1>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+      <div class="row">
+        <div class="facilites-col">
+          <img src="library.jpg" alt="" />
+          <h3>World Class Liabrary</h3>
+        </div>
+        <div class="facilites-col">
+          <img src="basketbal.jpg" alt="" />
+          <h3>Largest Play Ground</h3>
+        </div>
+        <div class="facilites-col">
+          <img src="coffeehouse.jpg" alt="" />
+          <h3>Tastey And healthy Food</h3>
+        </div>
+      </div>
+    </section>
+    <section class="cta">
+      <h1>
+        Enroll For Our Various Courses <br />
+        Anywhere From the World
+      </h1>
+      <a href="" class="hero-btn">CONTACT US</a>
+    </section>
+    <footer class="footer">
+      <h4>ABOUT US</h4>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore,
+        nostrum. Accusamus omnis quia quam debitis ea facilis doloribus itaque
+        quidem.
+      </p>
+      <div class="icons">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-linkedin"></i>
+      </div>
+    </footer>
     <script>
       var navLinks = document.getElementById("navLinks");
 
